// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleCard /> by default matches with snapshot 1`] = `
<div
  className="sc-AxheI eHlfXY k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    >
      <img
        alt=""
        className="k-Card__image"
        src="https://placehold.it/160x100/caf4fe/caf4fe"
        style={
          Object {
            "backgroundColor": "#d8d8d8",
          }
        }
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/caf4fe/caf4fe"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  
  
</div>
`;

exports[`<ArticleCard /> with articleTitle and articleSubTitle props matches with snapshot 1`] = `
<div
  className="sc-AxheI eHlfXY k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    >
      <img
        alt=""
        className="k-Card__image"
        src="https://placehold.it/160x100/caf4fe/caf4fe"
        style={
          Object {
            "backgroundColor": "#d8d8d8",
          }
        }
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/caf4fe/caf4fe"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    <div
      className="k-CrowdfundingCard__title"
    >
      <p
        className="sc-AxjAm fgxfLS k-Card__title k-CrowdfundingCard__title__title"
      >
        Custom title
      </p>
    </div>
    
    <div
      className="k-CrowdfundingCard__subtitle__container"
    >
      <div
        className="sc-AxirZ wSPT k-HorizontalStroke k-CrowdfundingCard__subtitle__horizontalStroke k-HorizontalStroke--size--tiny"
        color="#222"
        style={
          Object {
            "height": null,
            "width": null,
          }
        }
      />
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__subtitle__subtitleText k-CrowdfundingCard__subtitle__subtitleText--truncated"
      >
        <span
          className="k-CrowdfundingCard__noWrap"
          width={0}
        >
          <span />
          <span>
            Custom subtitle
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
    
  </div>
  
  
</div>
`;

exports[`<ArticleCard /> with ignored props matches with snapshot 1`] = `
<div
  className="sc-AxheI eHlfXY k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    >
      <img
        alt=""
        className="k-Card__image"
        src="https://placehold.it/160x100/caf4fe/caf4fe"
        style={
          Object {
            "backgroundColor": "#d8d8d8",
          }
        }
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/caf4fe/caf4fe"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  
  
</div>
`;

exports[`<ArticleCard /> with some props matches with snapshot 1`] = `
<a
  className="sc-AxheI eHlfXY k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
  href="#foobar"
  onClick={[Function]}
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    >
      <img
        alt="Image alt"
        className="k-Card__image"
        color="#333"
        src="#image"
        style={
          Object {
            "backgroundColor": "#d8d8d8",
          }
        }
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
          tabIndex={null}
        >
          <img
            alt="Avatar alt"
            className="k-ButtonImage__img"
            src="#avatar"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          Custom title
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          Custom description
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    <div
      className="k-CrowdfundingCard__title"
    >
      <p
        className="sc-AxjAm fgxfLS k-Card__title k-CrowdfundingCard__title__title"
      >
        Custom title
      </p>
    </div>
    
    <div
      className="k-CrowdfundingCard__subtitle__container"
    >
      <div
        className="sc-AxirZ wSPT k-HorizontalStroke k-CrowdfundingCard__subtitle__horizontalStroke k-HorizontalStroke--size--tiny"
        color="#222"
        style={
          Object {
            "height": null,
            "width": null,
          }
        }
      />
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__subtitle__subtitleText k-CrowdfundingCard__subtitle__subtitleText--truncated"
      >
        <span
          className="k-CrowdfundingCard__noWrap"
          width={0}
        >
          <span />
          <span>
            Custom subtitle
          </span>
          <span
            style={
              Object {
                "left": 0,
                "position": "fixed",
                "top": 0,
                "visibility": "hidden",
              }
            }
          >
            …
          </span>
        </span>
      </p>
    </div>
    
  </div>
  
  
</a>
`;
